--- a/src/main/resources/templates/receptionistPrintReceipt.html
+++ b/src/main/resources/templates/receptionistPrintReceipt.html
@@ -2,19 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Receptionist Dashboard</title>
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
-	rel='stylesheet'>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<title>Receptionist Dashboard</title>
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -24,36 +19,34 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}" class="active"> <i
-					class='bx bx-grid-alt'></i> <span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/deleteAppointment}"> <i
-					class='bx bx-box'></i> <span class="links_name">Delete </span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"> <i
-					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
-				</span>
-			</a></li>
-			<li><a th:href="@{/receptionist}"> <i
-					class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
+			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i> <span
+						class="links_name">Dashboard</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
+						class="links_name">Delete </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
+						class="links_name">Reschedule
+					</span>
+				</a></li>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
 						Print Receipt</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
-					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/patientPrescription}"> <i
-					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
+						class="links_name">Specialization</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
+						class="links_name">Prescriptions</span>
+				</a></li>
 			<li><a th:href="@{/receptionist}"> <i class='bx bx-user'></i>
 					<span class="links_name">Delayed</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/appointmentPerDoctor}"> <i
-					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
-			</a></li>
-			<li class="log_out"><button
-					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+				</a></li>
+			<li><a th:href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
+						class="links_name">AppointmentperDoctor</span>
+				</a></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -67,7 +60,7 @@
 			</div>
 		</nav>
 
-		<!-- <div class="home-content">
+		<div class="home-content">
 			<div class="overview-boxes">
 				<div class="box">
 					<div class="right-side">
@@ -91,7 +84,7 @@
 						<div class="number" th:text="${'&#8377;' + #lists.size(totalFee)}"></div>
 						<div class="indicator"></div>
 					</div>
- -->
+
 				</div>
 				<!-- <div class="box">
 					<div class="right-side">
@@ -105,27 +98,23 @@
 
 			<div class="sales-boxes">
 				<div class="recent-sales box">
-					<div class="title">Total No.of Appointments </div>
+					<div class="title">Appointments for the day</div>
 					<div class="sales-details">
 						<ul class="details">
 							<li class="topic">Date</li>
-							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.appointmentTime}" href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.appointmentTime}" href="#"></a></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Patient's Name</li>
-							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.patientName}" href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.patientName}" href="#"></a></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Status</li>
-							<li th:each="ap: ${appointments}"><a th:text="${ap.status}"
-								href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.status}" href="#"></a></li>
 						</ul>
 						<ul class="details">
 							<li class="topic">Fees</li>
-							<li th:each="ap: ${appointments}"><a
-								th:text="${ap.doctor.fee}" href="#"></a></li>
+							<li th:each="ap: ${appointments}"><a th:text="${ap.doctor.fee}" href="#"></a></li>
 						</ul>
 
 					</div>
@@ -133,34 +122,33 @@
 						<a href="#">See All</a>
 					</div>
 				</div>
-				<!-- <div class="top-sales box">
+				<div class="top-sales box">
 					<div class="title">Doctors Available</div>
 					<ul class="top-sales-details">
 
-						<li th:each="doc: ${doctors}"><a href="#"> <span
-								class="product" th:text="${'Dr. '+doc.name}"></span>
-						</a> -->
+						<li th:each="doc: ${doctors}"><a href="#"> <span class="product"
+									th:text="${'Dr. '+doc.name}"></span>
+							</a>
 							<div class="form-check form-switch">
 								<input class="form-check-input" type="checkbox" role="switch"
 									id="flexSwitchCheckChecked" th:checked="${doc.status}">
 								<label class="form-check-label" for="flexSwitchCheckChecked"></label>
-							</div></li>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
 	</script>
 	<script>
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -168,8 +156,7 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 </body>
