--- a/src/main/resources/templates/updateAppointment.html
+++ b/src/main/resources/templates/updateAppointment.html
@@ -2,52 +2,122 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
+	<!-- <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}"> -->
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 	crossorigin="anonymous">
 
-<link rel="stylesheet" href="../static/style.css"
-	th:href="@{/style.css}">
+<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}"> -->
 
 <title>Appointment Update Form</title>
 </head>
 <body>
-	<div class="container">
-		<div class="col">
-			<div class="signup-form">
-				<form name="form2" action="javascript:void(0)"
-					onsubmit="onPatRegister()">
-					<h2>Appointment Update</h2>
-					<p>Please fill in this form to update an appointment!</p>
-					<hr>
-
-					<label style="color: black">Appointment Id</label><br>
-					<div class="form-group">
-						<div>
-							<input type="number" class="form-control" id="appointmentId"
-								name="problemappointmentId" placeholder="ApointmentId"
-								required="required">
-							<div id="validationServer03Feedback" class="invalid-feedback">
-								Please provide a valid AppointmentID</div>
-						</div>
-
-
-						<label style="color: black">Doctor</label><br>
+	<div class="sidebar">
+		<div class="logo-details">
+			<i class='bx bxl-c-plus-plus'></i> <span class="logo_name">PASS
+				App</span>
+		</div>
+		<ul class="nav-links">
+			<li><a th:href="@{/receptionist}" > <i class='bx bx-grid-alt'></i> <span
+						class="links_name">Dashboard</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
+						class="links_name">Delete </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateAppointment}" class="active"> <i class='bx bx-list-ul'></i> 
+				<span class="links_name">Reschedule</span>
+			</a></li>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
+						Print Receipt</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
+						class="links_name">Specialization</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
+						class="links_name">Prescriptions</span>
+				</a></li>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-user'></i>
+					<span class="links_name">Delayed</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
+						class="links_name">AppointmentperDoctor</span>
+				</a></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
+		</ul>
+	</div>
+	<section class="home-section">
+		<nav>
+			<div class="sidebar-button">
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Reschedule</span>
+			</div>
+			<div class="profile-details">
+				<img src="../images/profile.jpg" alt=""> <span class="admin_name">Prem
+					Shahi</span> <i class='bx bx-chevron-down'></i>
+			</div>
+		</nav>
+		<div class="home-content">
+			<div class="overview-boxes">
+				<div class="signup-form">
+					<form name="form2" action="javascript:void(0)" onsubmit="onPatRegister()">
+						<h2>Appointment Update</h2>
+						<p>Please fill in this form to update an appointment!</p>
+						<hr>
+						<label style="color: black">Appointment Id</label><br>
 						<div class="form-group">
-							<select class="form-control" name="specialization"
-								id="docSpecialization">
-								<option value="Anesthesiologists">Anesthesiologists</option>
-								<option value="Cardiologists">Cardiologists</option>
-								<option value="Neurologists">Neurologists</option>
-								<option value="Radiologists">Radiologists</option>
+							<div>
+								<input type="number" class="form-control" id="appointmentId"
+									name="problemappointmentId" placeholder="ApointmentId"
+									required="required">
+								<div id="validationServer03Feedback" class="invalid-feedback">
+									Please provide a valid AppointmentID</div>
+							</div>
+						</div>
+						<label for="docName" style="color: black">Doctors's Name</label><br>
+						<div class="form-group">
+							<select required="required" onchange="onDocChange()" class="form-control" name="name"
+								id="docName">
+								<option value="">Select Doctor</option>
+								<option th:each="doc : ${doctors}" th:value="${doc.doctorId}" th:text="${doc.name}">
+								</option>
 							</select>
 						</div>
 
+						<label for="docSpecialization" style="color: black">Doctor's Specification</label><br>
+						<div class="form-group">
+							<div>
+								<input type="text" disabled class="form-control" name="specialization"
+									id="docSpecialization" required="required">
+							</div>
+						</div>
 
+						<label style="color: black">Date Of Appointment</label><br>
+						<div class="form-group">
+							<div>
+								<input type="date" class="form-control" name="dob">
+							</div>
+						</div>
+						
+						<label style="color: black">Patient's Name</label><br>
+						<div class="form-group">
+							<div>
+								<input type="text" class="form-control" id="patName" name="name"
+									placeholder="Name" required="required">
+								<div id="validationServer03Feedback" class="invalid-feedback">
+									Please provide a valid Name.</div>
+							</div>
+						</div>
+						
 						<label style="color: black">Problem</label><br>
 						<div class="form-group">
 							<div>
@@ -56,43 +126,32 @@
 								<div id="validationServer03Feedback" class="invalid-feedback">
 									Please provide a valid Problem.</div>
 							</div>
-
-							<label style="color: black">Date Of Appointment</label><br>
-							<div class="form-group">
-								<div>
-									<input type="date" class="form-control" name="dob">
-								</div>
+						</div>
+						<label style="color: black">Date Of Birth</label><br>
+						<div class="form-group">
+							<div>
+								<input type="date" class="form-control" name="dob">
 							</div>
-							<label style="color: black">Patient's Name</label><br>
-							<div class="form-group">
-								<div>
-									<input type="text" class="form-control" id="patName"
-										name="name" placeholder="Name" required="required">
-									<div id="validationServer03Feedback" class="invalid-feedback">
-										Please provide a valid Name.</div>
-								</div>
-								<label style="color: black">Date Of Birth</label><br>
-								<div class="form-group">
-									<div>
-										<input type="date" class="form-control" name="dob">
-									</div>
-								</div>
+						</div>
 
-								<div class="form-group">
-									<label style="color: black">Gender</label><br> <input
-										type="radio" name="gender" id="html" value="male"><label>Male</label><br>
-									<input type="radio" name="gender" id="html" value="female"><label>Female</label><br>
-									<input type="radio" name="gender" id="html" value="other"><label>Other</label>
-								</div>
+						<div class="form-group">
+							<label style="color: black">Doctor's Gender</label><br>
+							<select class="form-control" id="docGender">
+								<option value="male">Male</option>
+								<option value="female">Female</option>
+								<option value="other">Other</option>
+							</select>
+						</div>
 
-								<div class="form-group">
-									<button type="submit" class="btn btn-primary btn-lg">Update
-										Appointment</button>
-								</div>
-				</form>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary btn-lg">Update Appointment</button>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
-	</div>
+	</section>
+		
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 		crossorigin="anonymous"></script>
@@ -100,4 +159,8 @@
 		th:src="@{/mainjs.js}">
 		
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+
+		</script>
 </body>
