--- a/src/main/resources/templates/appointmentPerDoctor.html
+++ b/src/main/resources/templates/appointmentPerDoctor.html
@@ -28,7 +28,7 @@
 			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
 						class="links_name">Reschedule </span>
 				</a></li>
-			<li><a th:href="@{/receptionist}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
+			<li><a th:href="@{/receptionist/receptionistPrintReceipt}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
 						Receipt</span>
 				</a></li>
 			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
@@ -36,8 +36,6 @@
 				</a></li>
 			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
 						class="links_name">Prescriptions</span>
-				</a></li>
-			<li><a href="@{/receptionist}"> <i class='bx bx-user'></i> <span class="links_name">Delayed</span>
 				</a></li>
 			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
 						class="links_name">AppointmentperDoctor</span>
