--- a/src/main/resources/templates/receptionistPrintReceipt.html
+++ b/src/main/resources/templates/receptionistPrintReceipt.html
@@ -24,35 +24,30 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}" class="active"> <i
-					class='bx bx-grid-alt'></i> <span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/deleteAppointment}"> <i
-					class='bx bx-box'></i> <span class="links_name">Delete </span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"> <i
-					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
-				</span>
-			</a></li>
-			<li><a th:href="@{/receptionist}"> <i
-					class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
-						Print Receipt</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
-					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/patientPrescription}"> <i
-					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
-			</a></li>
-			<li><a th:href="@{/receptionist}"> <i class='bx bx-user'></i>
-					<span class="links_name">Delayed</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/appointmentPerDoctor}"> <i
-					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
-			</a></li>
-			<li class="log_out"><a onclick="logout()"> <i
-					class='bx bx-log-out'></i> <span class="links_name">Log out</span>
-			</a></li>
+			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
+					<span class="links_name">Dashboard</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
+						class="links_name">Delete </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
+						class="links_name">Reschedule </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/receptionistPrintReceipt}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
+						Receipt</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
+						class="links_name">Specialization</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
+						class="links_name">Prescriptions</span>
+				</a></li>
+			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
+						class="links_name">AppointmentperDoctor</span>
+				</a></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
