--- a/src/main/resources/templates/deleteAppointment.html
+++ b/src/main/resources/templates/deleteAppointment.html
@@ -4,10 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Delete Appointment</title>
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
-	rel='stylesheet'>
+<link rel="stylesheet" href="../static/patientDash.css" th:href="@{/patientDash.css}">
+<!-- <link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}"> -->
+<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -20,8 +19,8 @@
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
-			<i class='bx bxl-c-plus-plus'></i> <span class="logo_name">PASS
-				App</span>
+			<i class='bx bxl-c-plus-plus'></i> 
+			<span class="logo_name">PASS App</span>
 		</div>
 		<ul class="nav-links">
 			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
@@ -63,14 +62,14 @@
 					Appointment</span>
 			</div>
 			<div class="profile-details">
-				<img src="images/profile.jpg" alt=""> <span class="admin_name">Receptionist</span>
+				<img src="../images/profile.jpg" alt=""> <span class="admin_name">Receptionist</span>
 				<i class='bx bx-chevron-down'></i>
 			</div>
 		</nav>
 
 		<div class="home-content">
 
-			<div class="container sales-boxes" style="max-width: 900px">
+			<div class="container sales-boxes" style="max-width: 600px">
 				<div class="col ">
 					<div class="signup-form">
 						<form name="form2" action="javascript:void(0)"
@@ -110,26 +109,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="top-sales box">
-			<div class="title">Doctor Available</div>
-			<ul class="top-sales-details">
-				<li><a href="#"><img
-						src="https://img.icons8.com/office/40/000000/administrator-male--v1.png" />
-						<span class="product">Dr Gulati</span> </a>
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" role="switch"
-							id="flexSwitchCheckChecked" checked> <label
-							class="form-check-label" for="flexSwitchCheckChecked"></label>
-					</div></li>
-				<li><a href="#"><i class="fa-solid fa-user-tie-hair-long"></i>
-						<span class="product">Dr Nidhi</span> </a>
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" role="switch"
-							id="flexSwitchCheckChecked" checked> <label
-							class="form-check-label" for="flexSwitchCheckChecked"></label>
-					</div></li>
-			</ul>
-		</div>
+		
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
