--- a/src/main/resources/templates/deleteAppointment.html
+++ b/src/main/resources/templates/deleteAppointment.html
@@ -24,36 +24,30 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/deleteAppointment}"
-				class="active"> <i class='bx bx-box'></i> <span
-					class="links_name">Delete </span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateAppointment}"> <i
-					class='bx bx-list-ul'></i> <span class="links_name">Reschedule
-				</span>
-			</a></li>
-			<li><a th:href="@{/receptionist}"> <i
-					class='bx bx-pie-chart-alt-2'></i> <span class="links_name">
-						Print Receipt</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/updateSpecialization}"> <i
-					class='bx bx-coin-stack'></i> <span class="links_name">Specialization</span>
-			</a></li>
-			<li><a th:href="@{/receptionist/patientPrescription}"> <i
-					class='bx bx-book-alt'></i> <span class="links_name">Prescriptions</span>
-			</a></li>
-			<li><a href="@{/receptionist}"> <i class='bx bx-user'></i> <span
-					class="links_name">Delayed</span>
-			</a></li>
-			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i
-					class='bx bx-cog'></i> <span class="links_name">AppointmentperDoctor</span>
-			</a></li>
-			<li class="log_out"><a onclick="logout()"> <i
-				class='bx bx-log-out'></i> <span class="links_name">Log out</span>
-		</a></li>
+				</a></li>
+			<li><a th:href="@{/receptionist/deleteAppointment}"> <i class='bx bx-box'></i> <span
+						class="links_name">Delete </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateAppointment}"> <i class='bx bx-list-ul'></i> <span
+						class="links_name">Reschedule </span>
+				</a></li>
+			<li><a th:href="@{/receptionist/receptionistPrintReceipt}"> <i class='bx bx-pie-chart-alt-2'></i> <span class="links_name"> Print
+						Receipt</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/updateSpecialization}"> <i class='bx bx-coin-stack'></i> <span
+						class="links_name">Specialization</span>
+				</a></li>
+			<li><a th:href="@{/receptionist/patientPrescription}"> <i class='bx bx-book-alt'></i> <span
+						class="links_name">Prescriptions</span>
+				</a></li>
+			<li><a href="@{/receptionist/appointmentPerDoctor}"> <i class='bx bx-cog'></i> <span
+						class="links_name">AppointmentperDoctor</span>
+				</a></li>
+			<li class="log_out"><a onclick="logout()"> <i class='bx bx-log-out'></i> <span class="links_name">Log
+						out</span>
+				</a></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -110,26 +104,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="top-sales box">
-			<div class="title">Doctor Available</div>
-			<ul class="top-sales-details">
-				<li><a href="#"><img
-						src="https://img.icons8.com/office/40/000000/administrator-male--v1.png" />
-						<span class="product">Dr Gulati</span> </a>
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" role="switch"
-							id="flexSwitchCheckChecked" checked> <label
-							class="form-check-label" for="flexSwitchCheckChecked"></label>
-					</div></li>
-				<li><a href="#"><i class="fa-solid fa-user-tie-hair-long"></i>
-						<span class="product">Dr Nidhi</span> </a>
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" role="switch"
-							id="flexSwitchCheckChecked" checked> <label
-							class="form-check-label" for="flexSwitchCheckChecked"></label>
-					</div></li>
-			</ul>
-		</div>
+		
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
