--- a/src/main/resources/templates/patientPrescription.html
+++ b/src/main/resources/templates/patientPrescription.html
@@ -76,7 +76,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Fees Received</div>
-						<div class="number">$12,876</div>
+						<div class="number">12,876</div>
 						<div class="indicator"></div>
 					</div>
 
@@ -140,7 +140,7 @@
 				<div class="top-sales box">
 					<div class="title">Doctor Available</div>
 					<ul class="top-sales-details">
-						<li><a href="#"><img src="https://img.icons8.com/office/40/000000/administrator-male--v1.png" />
+						<li><a href="#">
 								<span class="product">Dr Gulati</span> </a>
 							<div class="form-check form-switch">
 								<input class="form-check-input" type="checkbox" role="switch"
